<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/master_config"
            android:id="@+id/tv_header" android:layout_gravity="center_horizontal" android:layout_marginTop="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/one_time"
            android:id="@+id/tv_header_description" android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="25dp" android:gravity="center_vertical"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_weight="0.5">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/name"
                    android:id="@+id/textView" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/enter_name"
                    android:ems="10"
                    android:id="@+id/et_name"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_weight="0.5">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/man_or_women"
                    android:id="@+id/tv_man_or_women" android:gravity="center" android:layout_marginLeft="20dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:gravity="center_vertical|right">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        android:id="@+id/rb_man" android:layout_marginRight="10dp"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:id="@+id/rb_woman"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="25dp" android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="0.4">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/birthday"
                        android:id="@+id/textView2"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:weightSum="1"
                        android:layout_marginTop="10dp" android:gravity="center">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/day"
                            android:id="@+id/textView3"
                            android:layout_marginRight="5dp"/>
                    <EditText
                            android:layout_width="33dp"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/editText" android:layout_weight="0.44" android:layout_marginRight="5dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/month"
                            android:id="@+id/textView4" android:layout_marginRight="5dp"/>
                    <EditText
                            android:layout_width="33dp"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/editText2" android:layout_weight="0.33" android:layout_marginRight="5dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/year"
                            android:id="@+id/textView5" android:layout_marginRight="5dp"
                            />
                    <EditText
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/editText3"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="10dp"
                        >
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:gravity="center_vertical"
                            android:layout_weight="0.5" android:layout_marginRight="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/length"
                                android:id="@+id/textView6" android:layout_marginRight="5dp"/>
                        <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberSigned"
                                android:ems="10"
                                android:id="@+id/editText4"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" android:layout_weight="0.5"
                            android:gravity="center_vertical">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/ves"
                                android:id="@+id/textView7"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:ems="10"
                                android:id="@+id/editText5" android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="10dp"
                        android:gravity="center_vertical">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/get_up"
                            android:id="@+id/textView8" android:layout_marginRight="5dp"/>
                    <EditText
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:ems="10"
                            android:id="@+id/editText6" android:layout_marginRight="5dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/hour"
                            android:id="@+id/textView9" android:layout_marginRight="5dp"/>
                    <EditText
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:ems="10"
                            android:id="@+id/editText7" android:layout_marginRight="5dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/minutes"
                            android:id="@+id/textView10"/>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                              android:layout_height="wrap_content" android:layout_marginTop="10dp"
                              android:gravity="center_vertical" android:id="@+id/linearLayout">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/go_slip"
                              android:id="@+id/textView11" android:layout_marginRight="15dp"/>
                    <EditText android:layout_width="66dp" android:layout_height="wrap_content"
                              android:inputType="numberSigned" android:ems="10" android:id="@+id/editText8"
                              android:layout_marginRight="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/hour"
                              android:id="@+id/textView12" android:layout_marginRight="5dp"/>
                    <EditText android:layout_width="66dp" android:layout_height="wrap_content"
                              android:inputType="numberSigned" android:ems="10" android:id="@+id/editText9"
                              android:layout_marginRight="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/minutes"
                              android:id="@+id/textView13"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_weight="0.6" android:gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView" android:src="@drawable/boy"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_size"
                android:id="@+id/checkBox" android:layout_weight="0.5"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_progress"
                android:id="@+id/checkBox2" android:layout_weight="0.5"/>

    </LinearLayout>
    <Button
            android:layout_width="518dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:id="@+id/button" android:layout_gravity="center_horizontal"
            android:enabled="true" android:layout_marginTop="200dp"/>
</LinearLayout>